--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 @import "tailwindcss";
 
+@layer base {
+  h1 {
+    font-family: "Pixelify Sans", sans-serif;
+  }
+}
 @theme {
-    --font-sans: "Pixelify Sans", sans-serif;
+  --font-sans: "Plus Jakarta Sans", sans-serif;
 }
 
 @keyframes marquee {
-    from {
-        transform: translateX(0%);
-    }
+  from {
+    transform: translateX(0%);
+  }
 
-    to {
-        transform: translateX(-100%);
-    }
+  to {
+    transform: translateX(-100%);
+  }
 }
